--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
+ipywidgets==7.7.1
 matplotlib
 numpy
 pandas
-git+https://github.com/hiive/hiivemdptoolbox.git@dd44587196f698ecbe34ab51eed3b13051e82c1b
+git+https://github.com/hiive/hiicemdptoolbox.git@dd44587196f698ecbe34ab51eed3b13051e82c1b
